# RookVsBishop

./: .gitignore  README.md  main.py  pyproject.toml
board/: board.py
moves/: chess_coordinates_converter.py
pieces/: piece.py  rook.py
rookvsbishop/board/: board.py
rookvsbishop/games/: rook_vs_bishop.py
rookvsbishop/pieces/: bishop.py  piece.py  rook.py
src/board/: board.py
src/games/: rook_vs_bishop.py
src/moves/: chess_coordinates_converter.py
src/pieces/: bishop.py  piece.py  rook.py
test/board/: test_board.py
test/games/: test_rook_vs_bishop.py
test/moves/: test_chess_coordinates_converter.py
test/pieces/: test_bishop.py  test_rook.py
